--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <option value="medium" >medium </option>
                 <option value="hard" >hard</option>
             </select>
-
         </div>
         <h3 class="time-title">Time: <span class="time">15</span></h3>
     </header>
     <div class="container">
+        <h2 id="loading"></h2>
         <img src="undraw_world_re_768g.svg" id="image" class="img" alt="" width="450" height="250">
         <div class="buttons">
             <h4 class="buttons-title">Find the country of this flag</h4>
