start btn added

--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
         <img src="undraw_world_re_768g.svg" id="image" class="img" alt="" width="450" height="250">
         <div class="buttons">
             <h4 class="buttons-title">Find the country of this flag</h4>
-            <button type="button" class="btn first">Country1</button>
-            <button type="button" class="btn">Country2</button>
+            <div class="btns">
+                <button type="button" class="btn first">Country1</button>
+                <button class="startGame">Start Game</button>
+                <button type="button" class="btn">Country2</button>
+            </div>
 
         </div>
 
